languages/montiarc-fe/src/test/resources/automaton/invalid/InvalidDatatypes.cd
package automaton.invalid;

classdiagram InvalidDatatypes {
  enum invalidType {A, B, C;} // lower case name
}